Bug 1312697 - Do not consider the page to be finished loading if it's in the 'stopped' state. r=tnikkel

MozReview-Commit-ID: 2rnvkwsmQCQ

--HG--
extra : rebase_source : 0ce14917b7787dfaec09bd59d68c5f5074d8bc5a